# epiplexity-curriculum-post-training

./: .gitignore  FINAL_RESULTS.md  RESULTS.md  compare_results.py  comparison.json  evaluate.py  measure_forking_entropy.py  measure_reward_variance.py  measure_rollout_epiplexity.py  meaure_reward_variance.py  post_training.py  probe_epiplexity.py  pyproject.toml  readme.md  requirements.txt
configs/: datasets_config.yaml  training_config.yaml
data/: curriculum.py  datasets.py  epiplexity_scores.json  epiplexity_scores_3b.json  forking_entropy_1.5b.json  forking_entropy_3b.json  loader.py  registry.py  reward_variance_1.5b.json  reward_variance_3b.json  rollout_epiplexity_1.5b.json  rollout_epiplexity_3b.json
environment/: environment.yml  slurm_ablation.sbatch  slurm_baseline.sbatch  slurm_eval_aggregate.sbatch  slurm_eval_array.sbatch  slurm_eval_remaining.sbatch  slurm_eval_rerun.sbatch  slurm_forking_entropy.sbatch  slurm_job.sbatch  slurm_measure_reward_variance.sbatch  slurm_probe.sbatch  slurm_probe_3b.sbatch  slurm_reward_variance.sbatch  slurm_rollout_epiplexity.sbatch  slurm_sweep.sbatch
findings/: FINAL_RESULTS.md  README.md  RESULTS.md  anchor_sensitivity.md
findings/recompute_script/: correlations.csv  inspect_rankings.py  recompute_kauc.py
recompute_script/: recompute_kauc.py  recomputed_kauc.json
rewards/: __init__.py  code.py  math.py  qa.py
